--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,8 +1,8 @@
 html, body {
-    background-color: #fff;
-    color: #636b6f;
-    font-family: 'Nunito', sans-serif;
-    font-weight: 200;
+    background-color: #fff !important;
+    color: #636b6f !important;
+    font-family: 'Nunito', sans-serif !important;
+    font-weight: 200 !important;
     height: 100vh;
     margin: 0;
 }
