standard page layout en navbar aangepast zodat deze op alle paginas werkt

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -52,3 +52,7 @@ html, body {
 .custom-list-dropdown{
     list-style-type: none !important;
 }
+
+.navbar-push-content-down{
+    margin-bottom: 100px;
+}
